--- a/css/custom.css
+++ b/css/custom.css
@@ -8,3 +8,12 @@
     float: center;
     width: 910px;
 }
+
+label.error {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+  border: 1px solid transparent;
+  border-top-color: #f1b0b7;
+  padding: x;
+}
