--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -10,6 +10,7 @@
     width: 910px;
 }   
 
+//=== Estilo de los mensajes de las rules 
 label.error {
   color: #721c24;
   background-color: #f8d7da;
@@ -19,7 +20,7 @@ label.error {
   padding: x;
 }
 
-//=== Drawing effect
+//=== Botón: Efecto de dibujado
 
 @mixin btn-border-drawing($color: #ccc, $hover: black, $width: 2px, $vertical: top, $horizontal: left, $duration: 0.25s) {
     box-shadow: inset 0 0 0 $width $color;
@@ -75,7 +76,7 @@ label.error {
     @include btn-border-drawing( #ffc107, black, 4px, bottom, right);
   }
   
-  //=== Button styling, semi-ignore
+  //=== Estilo del botón, no tocar mucho.
   .btn {
     background: none;
     border: none;
